WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22703
Ordering of branch operands in MacroAssembler in unnecessarily inconsistent.
https://bugs.webkit.org/show_bug.cgi?id=22703
Summary
Ordering of branch operands in MacroAssembler in unnecessarily inconsistent.
Gavin Barraclough
Reported
2008-12-05 19:09:45 PST
je, jg etc take an immediate operand as the second argument, but for the equality branches (je, jne) the immediate operand is the first argument. This is unnecessarily inconsistent.
Attachments
The patch
(9.29 KB, patch)
2008-12-05 19:12 PST
,
Gavin Barraclough
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2008-12-05 19:12:19 PST
Created
attachment 25805
[details]
The patch
Gavin Barraclough
Comment 2
2008-12-05 19:25:26 PST
Sending JavaScriptCore/ChangeLog Sending JavaScriptCore/assembler/MacroAssembler.h Sending JavaScriptCore/jit/JIT.cpp Sending JavaScriptCore/wrec/WRECGenerator.cpp Transmitting file data .... Committed revision 39061.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug